--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/golfapipol/jest-sample/issues"
   },
-  "homepage": "https://github.com/golfapipol/jest-sample#readme"
+  "homepage": "https://github.com/golfapipol/jest-sample#readme",
+  "dependencies": {
+    "jest-cli": "^23.1.0"
+  }
 }
